k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-chat-app
          image: mongo
          ports:
            - containerPort: 27017
      volumes:
        - name: mongodb-pv
          persistentVolumeClaim:
            claimName: mongodb-pvc
